# axe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
packaging/arch/: PKGBUILD-bin  PKGBUILD-git
src/: cli.rs  commands.rs  config.rs  download.rs  github.rs  main.rs
