[package]
name = "axe"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
target-lexicon = "0.13.5"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
