[package]
name = "axe"
version = "0.1.0"
edition = "2024"
description = "A simple CLI package manager for AppImages"
repository = "https://github.com/BardiyaFeili/axe"
keywords = ["appimage", "package-manager", "cli", "linux"]
categories = ["command-line-utilities"]

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
target-lexicon = "0.13.5"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
